--- a/index.html
+++ b/index.html
@@ -4,21 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airtable Data Display</title>
-    <style>
-        .pagination {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 20px 0;
-        }
-        .pagination button {
-            margin: 0 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 <body>
-    <div id="version">Version: 2023-05-10-023</div>
-    <div id="timestamp">Last updated: 2023-05-10 12:00:00</div>
+    <div id="version">Version: 2023-05-10-028</div>
+    <div id="timestamp">Last updated: 2023-05-10 17:00:00</div>
     <div id="updateInfo"></div>
     <div id="recordCount"></div>
     <div id="search">
@@ -36,7 +26,7 @@
         <span id="currentPageBottom"></span>
         <button id="nextPageBottom">Next</button>
     </div>
-    <script src="script.js?v=2023-05-10-023"></script>
+    <script src="script.js?v=2023-05-10-028"></script>
 </body>
 </html>
 
