--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airtable Data Display</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/$120240829-230838">
 </head>
 <body>
     <div id="version">Version: 2023-05-10-028</div>
@@ -26,7 +26,7 @@
         <span id="currentPageBottom"></span>
         <button id="nextPageBottom">Next</button>
     </div>
-    <script src="script.js?v=2023-05-10-028"></script>
+    <script src="$120240829-230838"></script>
 </body>
 </html>
 
