--- a/data_governance.html
+++ b/data_governance.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airtable Data Display</title>
-    <link rel="stylesheet" href="stylesheets/$120240829-230838">
+    <title>Data Governance - Airtable Data Display</title>
+    <link rel="stylesheet" href="stylesheets/styles.css?v=2023-05-11-001">
 </head>
 <body>
-    <div id="version">Version: 2023-05-10-028</div>
-    <div id="timestamp">Last updated: 2023-05-10 17:00:00</div>
+    <h1>Data Governance</h1>
+    <div id="version">Version: 2023-05-11-001</div>
+    <div id="timestamp">Last updated: 2023-05-11 00:00:00</div>
     <div id="updateInfo"></div>
     <div id="recordCount"></div>
     <div id="search">
@@ -26,7 +27,6 @@
         <span id="currentPageBottom"></span>
         <button id="nextPageBottom">Next</button>
     </div>
-    <script src="scripts/$120240829-232341"></script>
+    <script src="scripts/data_governance.js?v=2023-05-11-001"></script>
 </body>
 </html>
-
