--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airtable Data Display</title>
-    <link rel="stylesheet" href="stylesheets/$120240829-230838">
+    <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 <body>
-    <div id="version">Version: 2023-05-10-028</div>
-    <div id="timestamp">Last updated: 2023-05-10 17:00:00</div>
-    <div id="updateInfo"></div>
+    <h1>Airtable Data Display</h1>
     <div id="recordCount"></div>
     <div id="search">
         <input type="text" id="searchInput" placeholder="Search Title or Short Summary">
@@ -26,6 +24,7 @@
         <span id="currentPageBottom"></span>
         <button id="nextPageBottom">Next</button>
     </div>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
 
