--- a/data_governance.html
+++ b/data_governance.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Governance - Airtable Data Display</title>
-    <link rel="stylesheet" href="stylesheets/styles.css?v=2023-05-11-001">
+    <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 <body>
     <h1>Data Governance</h1>
-    <div id="version">Version: 2023-05-11-001</div>
-    <div id="timestamp">Last updated: 2023-05-11 00:00:00</div>
-    <div id="updateInfo"></div>
     <div id="recordCount"></div>
     <div id="search">
         <input type="text" id="searchInput" placeholder="Search Title or Short Summary">
@@ -27,6 +24,6 @@
         <span id="currentPageBottom"></span>
         <button id="nextPageBottom">Next</button>
     </div>
-    <script src="scripts/data_governance.js?v=2023-05-11-001"></script>
+    <script src="scripts/data_governance.js"></script>
 </body>
 </html>
