--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1>Airtable Data Display</h1>
     <div id="recordCount"></div>
-    <div id="search">
+    <form id="searchForm">
         <input type="text" id="searchInput" placeholder="Search Title or Short Summary">
-        <button id="searchButton">Search</button>
-    </div>
+        <button type="submit" id="searchButton">Search</button>
+    </form>
     <div class="pagination" id="topPagination">
         <button id="prevPageTop">Previous</button>
         <span id="currentPageTop"></span>
