--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airtable Data Display</title>
+    <title>Campus AI Exchange</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 <body>
-    <h1>Airtable Data Display</h1>
+    <h1>Homepage</h1>
     <div id="recordCount"></div>
     <form id="searchForm">
         <input type="text" id="searchInput" placeholder="Search Title or Short Summary">
