--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campus AI Exchange</title>
+    <title>Airtable Data Display</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 <body>
@@ -19,11 +19,6 @@
         <button id="nextPageTop">Next</button>
     </div>
     <div id="content"></div>
-    <div class="pagination" id="bottomPagination">
-        <button id="prevPageBottom">Previous</button>
-        <span id="currentPageBottom"></span>
-        <button id="nextPageBottom">Next</button>
-    </div>
     <script src="scripts/script.js"></script>
 </body>
 </html>
