--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Airtable Data Display</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 <body>
-    <h1>Homepage</h1>
+    <h1>Airtable Data Display</h1>
     <div id="recordCount"></div>
     <form id="searchForm">
         <input type="text" id="searchInput" placeholder="Search Title or Short Summary">
@@ -19,7 +22,7 @@
         <button id="nextPageTop">Next</button>
     </div>
     <div id="content"></div>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/$120240830-000131"></script>
 </body>
 </html>
 
