--- a/data_governance.html
+++ b/data_governance.html
@@ -22,6 +22,6 @@
         <button id="nextPageTop">Next</button>
     </div>
     <div id="content"></div>
-    <script src="scripts/data_governance.js?v=1"></script>
+    <script src="scripts/data_governance.js"></script>
 </body>
 </html>
