--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 <body>
-    <h1>Airtable Data Display</h1>
+    <h1>Homepage</h1>
     <div id="recordCount"></div>
     <form id="searchForm">
         <input type="text" id="searchInput" placeholder="Search Title or Short Summary">
