--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button id="nextPageTop">Next</button>
     </div>
     <div id="content"></div>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/this_week.js"></script>
 </body>
 </html>
 
