--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button id="nextPageTop">Next</button>
     </div>
     <div id="content"></div>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/this_week.js"></script>
     <script>
         fetch('header.html')
             .then(response => response.text())
