--- a/header.html
+++ b/header.html
@@ -3,6 +3,11 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="data_governance.html">Data Governance</a></li>
+            <li><a href="this_week.html">This Week</a></li>
         </ul>
     </nav>
+    <form id="globalSearchForm">
+        <input type="text" id="globalSearchInput" placeholder="Search entire Contents table">
+        <button type="submit" id="globalSearchButton">Search</button>
+    </form>
 </header>
