--- a/index.html
+++ b/index.html
@@ -13,22 +13,20 @@
     <div id="header-placeholder"></div>
     <h1>Homepage</h1>
     <div id="recordCount"></div>
-    <form id="searchForm">
-        <input type="text" id="searchInput" placeholder="Search Title or Short Summary">
-        <button type="submit" id="searchButton">Search</button>
-    </form>
     <div class="pagination" id="topPagination">
         <button id="prevPageTop">Previous</button>
         <span id="currentPageTop"></span>
         <button id="nextPageTop">Next</button>
     </div>
     <div id="content"></div>
-    <script src="scripts/this_week.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/global_search.js"></script>
     <script>
         fetch('header.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('header-placeholder').innerHTML = data;
+                setupGlobalSearch(); // Call this after the header is loaded
             });
     </script>
 </body>
