--- a/header.html
+++ b/header.html
@@ -3,6 +3,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="data_governance.html">Data Governance</a></li>
+            <li><a href="this_week.html">This Week</a></li>
         </ul>
     </nav>
     <form id="globalSearchForm">
