--- a/responsible_ethical.html
+++ b/responsible_ethical.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="header-placeholder"></div>
-    <h1>Data Governance</h1>
+    <h1>Responsible and Ethnical AI</h1>
     <div id="recordCount"></div>
     <div class="pagination" id="topPagination">
         <button id="prevPageTop">Previous</button>
