--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>Airtable Data Display</title>
+    <title>Responsible and Ethical AI - Airtable Data Display</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 <body>
     <div id="header-placeholder"></div>
-    <h1>Homepage</h1>
+    <h1>Responsible and Ethical AI</h1>
     <div id="recordCount"></div>
     <div class="pagination" id="topPagination">
         <button id="prevPageTop">Previous</button>
@@ -30,4 +30,3 @@
     </script>
 </body>
 </html>
-
