--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="header-placeholder"></div>
-    <h1>Responsible and Ethical AI</h1>
+    <h1>This Week</h1>
     <div id="recordCount"></div>
     <div class="pagination" id="topPagination">
         <button id="prevPageTop">Previous</button>
