--- a/header.html
+++ b/header.html
@@ -1,9 +1,12 @@
 <header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="data_governance.html">Data Governance</a></li>
-            <li><a href="responsible_ethical.html">Responsible and Ethical AI</a></li>
-        </ul>
-    </nav>
+    <div class="header-container">
+        <h1 class="site-title">Airtable Data Display</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="data_governance.html">Data Governance</a></li>
+                <li><a href="this_week.html">This Week</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
